fixed horizontal scroll issue on slider

--- a/packages/beauty-portal-theme/src/components/Slider/styles.scss
+++ b/packages/beauty-portal-theme/src/components/Slider/styles.scss
@@ -3,10 +3,10 @@
 .bp-slider {
   position: relative;
   @media (max-width: 768px) {
-    display: flex;
-    padding-bottom: 0.5rem;
-    margin: 0 auto;
-    overflow-x: auto;
+    .swiper-container {
+      display: flex;
+      overflow-x: auto;
+    }
   }
   @media (min-width: 768px) {
     margin: 0;
